--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ cycler==0.11.0
 databricks-cli==0.17.7
 docker==6.1.3
 entrypoints==0.4
+filelock==3.12.0
 Flask==2.3.2
 flatbuffers==23.5.26
 fonttools==4.39.4
+fsspec==2023.5.0
 gast==0.4.0
 gitdb==4.0.10
 GitPython==3.1.31
@@ -25,6 +27,7 @@ google-pasta==0.2.0
 greenlet==2.0.2
 grpcio==1.54.2
 h5py==3.8.0
+huggingface-hub==0.15.1
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
@@ -50,6 +53,7 @@ protobuf==4.23.2
 pyarrow==12.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pydantic==1.10.8
 PyJWT==2.7.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -57,6 +61,7 @@ pytz==2023.3
 pywin32==306
 PyYAML==6.0
 querystring-parser==1.2.4
+regex==2023.6.3
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -75,6 +80,9 @@ tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 threadpoolctl==3.1.0
+tokenizers==0.13.3
+tqdm==4.65.0
+transformers==4.29.2
 typing_extensions==4.6.3
 tzdata==2023.3
 urllib3==1.26.16
