--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -7,7 +7,7 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     steps:
-      - name: Python Tox on Fedora
+      - name: Tox testing
         # You may pin to the exact commit or the version.
         # uses: fedora-python/tox-github-action@c61622a8c54b6712aff7fc300f4da2250b1c0a64
         uses: fedora-python/tox-github-action@v37.0
