--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -7,10 +7,11 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     steps:
-      - name: Tox testing
+      - name: Tox Env
         # You may pin to the exact commit or the version.
-        # uses: fedora-python/tox-github-action@c61622a8c54b6712aff7fc300f4da2250b1c0a64
-        uses: fedora-python/tox-github-action@v37.0
+        # uses: paolorechia/pox@3f66c75ba9990f315eabb45cf03efac0d91d7df6
+        uses: paolorechia/pox@v1.0.1
         with:
-          tox_env: py38
+          # Tox environment that will be used
+          tox_env: env
 
