--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -7,6 +7,11 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     steps:
+      - name: tests
+        uses: paolorechia/pox@v1.0.1
+        with:
+          tox_env: env
       - run: tox
+        
       
 
