--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -7,10 +7,11 @@ jobs:
   testing:
     runs-on: ubuntu-latest
     steps:
+      - run: cd ..
       - name: tests
         uses: paolorechia/pox@v1.0.1
         with:
           tox_env: env
-      - run: ls        
+      - run: tox 
       
 
