--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -12,6 +12,7 @@ jobs:
         uses: paolorechia/pox@v1.0.1
         with:
           tox_env: env
+      - uses: actions/checkout@v3
       - run: tox 
       
 
